--- a/doc/api_project.json
+++ b/doc/api_project.json
@@ -4,12 +4,16 @@
   "description": "Documenta&ccedil;&atilde;o das funcionalidades disponiveis para o #1 Hackathon.",
   "title": "SEFAZ/AL - Docs APIs do Hackathon #1",
   "url": "http://hackathonapi.sefaz.al.gov.br",
+  "header": {
+    "title": "Projeto Postman",
+    "content": "<h2>Projeto Postman</h2>\n<p><a href=\"https://github.com/SefazAL/Postman/blob/master/postman.zip?raw=true\">Postman</a></p>\n"
+  },
   "sampleUrl": false,
   "defaultVersion": "0.0.0",
   "apidoc": "0.3.0",
   "generator": {
     "name": "apidoc",
-    "time": "2017-08-17T22:57:22.886Z",
+    "time": "2017-08-17T23:38:48.808Z",
     "url": "http://apidocjs.com",
     "version": "0.17.6"
   }
